--- a/inline-session.html
+++ b/inline-session.html
@@ -141,8 +141,6 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
           // Start up an inline session, which should always be supported on
           // browsers that support WebXR regardless of the available hardware.
           navigator.xr.requestSession('inline').then((session) => {
-            // new
-            arStartedNeu = false;
             inlineSession = session;
             onSessionStarted(session);
             updateFov();
@@ -155,6 +153,8 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
           xrButton.setSession(session);
           // Set a flag on the session so we can differentiate it from the
           // inline session.
+          // new
+          arStartedNeu = false;
           session.isImmersive = true;
           onSessionStarted(session);
         });
@@ -174,6 +174,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
       function onSessionStarted(session) {
         session.addEventListener('end', onSessionEnded);
+        // new
         if (session.isImmersive) {
           // When in 'immersive-ar' mode don't draw an opaque background because
           // we want the real world to show through.
@@ -246,13 +247,9 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
       function onSessionEnded(event) {
         // Only reset the button when the immersive session ends.
         if (event.session.isImmersive) {
-          xrButton.setSession(null); 
-        }
-        // new
-        if (session.isImmersive && arStartedNeu) {
-          // When in 'immersive-ar' mode don't draw an opaque background because
-          // we want the real world to show through.
-          skybox.visible = false;
+          xrButton.setSession(null);
+          // new
+          skybox.visible = true;
         }
       }
 
