now resets correct button aswell

--- a/inline-session.html
+++ b/inline-session.html
@@ -250,6 +250,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
           xrButton.setSession(null);
           // new
           if(arStartedNeu) {
+            xrButtonNeu.setSession(null);
             skybox.visible = true;
             arStartedNeu = false;
           }
